Loading animation bug - not aligned with loading text

--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -4,6 +4,10 @@
   height: calc(100dvh - 66px);
   display: grid;
   place-content: center;
+
+  & h2 {
+    display: flex;
+  }
 }
 
 .animated-dots {
